objects/Supplier_Contact_Person__c.object
<CustomObject>
    <label>Supplier Contact Person</label>
    <nameField>
        <label>Supplier Contact Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Supplier Contact Persons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier</label>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Supplier Contact Persons</relationshipLabel>
        <relationshipName>Supplier_Contact_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Person_Email__c</fullName>
        <formula>Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Person Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplier_Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supplier Contact Person</label>
        <referenceTo>Supplier_Contact_Person__c</referenceTo>
        <relationshipLabel>Supplier Contact Persons</relationshipLabel>
        <relationshipName>Supplier_Contact_Persons</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>